[package]
name = "punch_clock"
version = "0.1.0"
authors = ["jatinchowdhury18 <jatinchowdhury18@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
time = "0.1"
